# skyvern-based-rpa-system

./: .env.example  .gitignore  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint-skyvern.sh  entrypoint-skyvernui.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_07_0001-enterprise_permission_tables.py
docs/: interview_qa.md  resume_guide.md
enterprise/: __init__.py  demo_seed.py
enterprise/agent/: __init__.py  coordinator.py  executor.py  planner.py  schemas.py
enterprise/approval/: __init__.py  models.py  pubsub.py  risk_detector.py  risk_keywords.py  routes.py  routing.py
enterprise/audit/: __init__.py  logger.py  models.py  routes.py  sanitizer.py  storage.py
enterprise/auth/: __init__.py  bridge.py  constraints.py  dependencies.py  enums.py  id.py  jwt_service.py  models.py  permission.py  routes.py  schemas.py
enterprise/dashboard/: __init__.py  cache.py  routes.py  stats.py
enterprise/llm/: __init__.py  action_cache.py  cache_routes.py  human_intervention.py  model_router.py  resilient_caller.py  task_states.py
enterprise/notification/: __init__.py  channels.py  dispatcher.py  templates.py
enterprise/skills/: __init__.py  auth_skills.py  base.py  executor.py  extraction_skills.py  interaction_skills.py
enterprise/tenant/: __init__.py  context.py  middleware.py  query_filter.py  routes.py
enterprise/workflows/: __init__.py  crypto.py  routes.py  schemas.py  templates.py  validator.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: ensure_enterprise_schema.py  seed_demo_data.py
skyvern/: config.py
skyvern-frontend/: .env  .env.example  index.html  localServer.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
skyvern-frontend/src/: App.tsx  index.css  router.tsx
skyvern/forge/: api_app.py
tests/: conftest.py  sit_test.py
tests/fixtures/: seed_demo_data.sql
tests/integration/: test_e2e_flow.py
tests/unit/: test_action_cache.py  test_agent.py  test_approval_model.py  (+16 more)
(+222 files in other folders)
