[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finrpa-enterprise"
version = "0.1.0"
description = "Financial-grade AI browser automation platform built on Skyvern"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    # === Skyvern core ===
    "fastapi>=0.121.0,<0.129",
    "uvicorn>=0.27.1,<1",
    "starlette>=0.46.2,<1",
    "sqlalchemy>=2.0.29,<3",
    "alembic>=1.13.1,<2",
    "psycopg[binary]>=3.1.18,<4",
    "asyncpg>=0.29.0,<1",
    "pydantic>=2.6.4,<3",
    "pydantic-settings>=2.2.1,<3",
    "openai>=1.66.5,<2",
    "litellm>=1.63.11,<2",
    "anthropic>=0.50.0,<0.51",
    "playwright>=1.46.0,<2",
    "httpx>=0.27.0,<1",
    "aiohttp>=3.9.3,<4",
    "aiofiles>=23.2.1,<24",
    "websockets>=12.0,<14",
    "structlog>=24.1.0,<25",
    "orjson>=3.10.0,<4",
    "jinja2>=3.1.3,<4",
    "python-dotenv>=1.0.1,<2",
    "python-multipart>=0.0.9,<1",
    "aioboto3>=12.3.0,<14",
    # === Enterprise extensions ===
    "redis>=5.0.3,<6",
    "minio>=7.2.0,<8",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-asyncio>=0.23.5,<1",
    "pytest-cov>=5.0.0,<6",
    "fakeredis>=2.21.0,<3",
    "ruff>=0.3.4,<1",
    "mypy>=1.9.0,<2",
    "isort>=5.13.2,<6",
    "ipython>=8.22.2,<9",
]

[tool.hatch.build.targets.wheel]
packages = [
    "skyvern",
    "alembic",
    "enterprise",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "skyvern-frontend",
    "node_modules",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = ["eval", "tests/sdk", "skyvern-frontend", "node_modules"]
asyncio_mode = "auto"
